003-ingress/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingresstest001.phaseiilabs.com
      http:
        paths:
          - backend:
              serviceName: piiapp-service
              servicePort: 80

# Error from server: error dialing backend: dial tcp 178.128.41.233:10250: connect: no route to host
